# 1004_Mortgage

./: .env.example  CHANGELOG.md  Makefile  README.md  form-1004-analysis-liquidglass.html  pyproject.toml
registry/: fields.json  photo_requirements.json  signature_requirements.json
samples/: fallback_extract.json  prebuilt_mortgage_1004.py
schema/: uad_1004_v1.json
src/: env_loader.py  main.py
src/api/: uad.py
src/uad/: __init__.py  azure_extract.py  conditions.py  validator.py
tests/: __init__.py
tests/uad/: __init__.py  builders.py  test_api_ui.py  test_api_validation_integration.py  test_azure_extract_fallback.py  test_azure_extract_normalization.py  test_extractor_mapping.py  test_validator_condition_consistency.py  test_validator_field_and_cross_rules.py  test_validator_minimal.py  test_validator_reconciliation_rule.py  test_validator_refinance_name_rule.py  test_validator_signature_rule.py  test_validator_source_alignment.py
