[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mortgage-uad"
version = "0.1.0"
description = "UAD validation service for Fannie Mae 1004 forms"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Mortgage Automation", email = "dev@example.com" }]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.24.0",
  "azure-ai-documentintelligence>=1.0.0b2",
  "jsonschema>=4.21",
  "httpx>=0.25.0",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.0.3"
]

[project.optional-dependencies]
dev = [
  "black>=23.12",
  "mypy>=1.8",
  "pytest>=7.4",
  "ruff>=0.1.8"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "ASYNC", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
packages = ["src"]
ignore_missing_imports = true
